Scout complete! and some class effect refined